--- a/Aula 2/index.html
+++ b/Aula 2/index.html
@@ -39,6 +39,14 @@
             Texto alinhado
         </p>
         <marquee>OPA</marquee>
+
+        <pre>
+            Texto 
+            personalizado
+
+            Outro texto
+        </pre>
+        <a href="http://www.google.com" target="_blank"> Link </a>
     </body>
 </html>
 
