--- a/Aula3/index.html
+++ b/Aula3/index.html
@@ -1,8 +1,7 @@
 <html>
     <head>
         <meta charset ="UTF-8"/>
-        <title>
-            Aula 2 - Parte 3</title>
+        <title> Aula 3</title>
     </head>
     <body>
         <p> Olá Mundo!</p>
@@ -46,8 +45,10 @@
 
             Outro texto
         </pre>
-        <a href="http://www.google.com" target="_blank"> Link </a>
-        <a href="quemsomos.html"> Quem somos </a>
+        <a href="http://www.google.com" target="_blank"> Link <br/> </a>
+        <a href="html/quemsomos.html"> Quem somos <br/> </a>
+        <a href="html/contato.html"> Contato <br/> </a>
+        <img src="img/ponte-hercilio-luz-floriano.jpg" width="1000" height="600" alt="Paraiso" align="right">
     </body>
 </html>
 
