--- a/aula4/index.html
+++ b/aula4/index.html
@@ -62,34 +62,34 @@
         <form>
             <fieldset>
                 <legend>Informações pessoais</legend>
-                <lable>Nome:</lable>
+                <label>Nome:</label>
                 <input type="text" value="Meu nome é"/>
                 <br/>
-                <lable>Sobrenome:</lable>
+                <label>Sobrenome:</label>
                 <input type="text" placeholder="Digite o sobrenome"/>
                 <br/>
-                <lable>Senha:</lable>
+                <label>Senha:</label>
                 <input type="password"/>
                 <br/>
-                <lable>Estado:</lable>
+                <label>Estado:</label>
                 <select>
                     <option>Paraná</option>
                     <option>Santa Catarina</option>
                     <option>Rio Grande do Sul</option>
                 </select>
                 <br/>
-                <lable>Cores:</lable> <br/>
+                <label>Cores:</label> <br/>
                 <input type="checkbox"/> Vermelho <br/>
                 <input type="checkbox"/> Verde <br/>
                 <input type="checkbox"/> Amarelo <br/>
                 <input type="checkbox"/> Azul <br/>
                 <input type="checkbox"/> Preto <br/>
 
-                <lable>Sexo:</lable> <br/>
+                <label>Sexo:</label> <br/>
                 <input type="radio" name="sexo"/> Masculino <br/>
                 <input type="radio" name="sexo"/> Feminino <br/>
 
-                <labe>Deixe seu Comentário:</labe> <br/>
+                <label>Deixe seu Comentário:</label> <br/>
                 <textarea cols="50" rows="5"> Meu comentário é</textarea> <br/>
 
                 <input type="submit" value="Gravar"/>
