--- a/aula4/atividadeAula4.html
+++ b/aula4/atividadeAula4.html
@@ -6,18 +6,18 @@
     <body>
         <table border="1" bordercolor="blue">
             <tr>
-                <th colspan="2" rowspan="2">Percentual(%)</th>
-                <th rowspan="2">Modem Tradicional(acesso discado linha telefônica)</th>
-                <th colspan="5">Banda larga</th>
+                <th colspan="2" rowspan="2">Percentual (%)</th>
+                <th rowspan="2">Modem Tradicional (acesso discado linha telefônica)</th>
+                <th colspan="5">Banda Larga</th>
                 <th rowspan="2">Outros</th>
                 <th rowspan="2">NS/NR</th>
             </tr>
 
             <tr>
                 <th>TOTAL Banda Larga</th>
-                <th>Modem digital via linha telefônica(tecnologia DSL)</th>
+                <th>Modem digital via linha telefônica (tecnologia DSL)</th>
                 <th>Modem via cabo</th>
-                <th>Conexão via radio</th>
+                <th>Conexão via rádio</th>
                 <th>Conexão via satélite</th>
             </tr>
             
@@ -34,7 +34,7 @@
             </tr>
 
             <tr>
-                <th rowspan="2">AREA</th>
+                <th rowspan="2">ÁREA</th>
                 <th>URBANA</th>
                 <td>19</td>
                 <td>66</td>
